# flash_anzan_web

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  LICENSE  README.md  amplify.yml  capacitor.config.ts  index.css  index.html  index.js  lint-staged.config.js  npm-shrinkwrap.json  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
scripts/: update_version
src/: .env.mobile  index.css  index.html  index.js  main.js  manifest.json  manifest.webmanifest  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: bootstrap-icons.min.css  bootstrap@5.0.0-beta1.css  button_events.js  globals.js  index.css  index.js
src/config/: beepTiming.ts  flashParamSchema.ts  flashTiming.ts  timeout.ts
src/favicons/: manifest.json
src/html/: README.md  readme.html
src/js/: FlashNumberHistory.ts  abacus.js  abacus.ts  complexityMap.ts  complexityThresholdMap.ts  complexity_map.js  complexity_map.ts  currentFlashMode.ts  delete_sw.js  delete_sw.ts  env.d.ts  flashNumberHistory.ts  flashParams.ts  flash_analysis.js  flash_analysis.ts  flash_numbers.js  flash_numbers.ts  flash_param_set.ts  globals.js  globals.ts  htmlElement.ts  index.js  index.ts  loadStatusManager.ts  load_sw.js  mobile.ts  (+7 more)
tools/: combineSounds.ts  convertReadmeToHtml.ts  createComplexityThresholdMap.ts  create_complexity_map.js  create_complexity_map.ts  eslintFix.ts
(+39 files in other folders)
