[package]
name = "aurora-flash"
version = "0.40.0"
description = "フラッシュ暗算"
authors = ["Noritaka IZUMI<noritaka.izumi@gmail.com>"]
license = "MIT"
repository = "https://gitlab.com/technical-study/flash_anzan_web.git"
#default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
# The Rust crate must output a library that will be embedded in the Android and iOS packages.
crate-type = ["staticlib", "cdylib", "rlib"]
